All the buttons back, set to gone

--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_news_item.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_news_item.xml
@@ -21,6 +21,7 @@
         <RelativeLayout
             android:id="@+id/back_button_holder"
             android:layout_width="wrap_content"
+            android:visibility="gone"
             android:layout_height="match_parent">
 
             <TextView
