--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_add_friend.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_add_friend.xml
@@ -33,6 +33,7 @@
             android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
+            android:visibility="gone"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
             android:tint="@color/light_colorPrimaryLight" />
