--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_profile.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_your_profile.xml
@@ -44,6 +44,8 @@
                 android:layout_height="@dimen/standard_button_height"
                 android:layout_alignParentStart="true"
                 android:adjustViewBounds="true"
+                android:tint="@color/light_colorPrimaryLight"
+                android:visibility="gone"
                 android:background="@android:color/transparent"
                 android:scaleType="centerInside"
                 android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />
