--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_signup.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_signup.xml
@@ -1,63 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/width_500"
-    android:layout_marginTop="@dimen/margin_base_size_60"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/margin_base_size_60"
+    android:background="?green_dark_1"
     android:clickable="true">
 
 
     <!-- TOP BUTTONS CONTAINER -->
-    <LinearLayout
+
+
+    <RelativeLayout
         android:id="@+id/top_buttons_container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:orientation="horizontal">
+        android:background="@drawable/lounge_background"
+        android:orientation="horizontal"
+        android:tileMode="repeat">
 
         <TextView
-            android:id="@+id/sign_up_login_button"
-            android:layout_width="@dimen/space_0"
+            style="@style/boldText"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginEnd="@dimen/margin_1"
-            android:layout_weight="1"
-            android:background="?colorAccentLight"
-            android:gravity="center"
-            android:text="@string/login_login"
-            android:textColor="?white_semitransparent" />
+            android:layout_centerInParent="true"
+            android:layout_marginEnd="1dp"
+            android:gravity="center_vertical"
+            android:text="@string/join_now_sign_in"
+            android:textAllCaps="true"
+            android:textColor="?white"
+            android:textSize="@dimen/font_size_16"
+            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/your_wallet_button"
-            android:layout_width="@dimen/space_0"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="@dimen/margin_1"
-            android:layout_weight="1"
-            android:background="?colorPrimarySemiLight"
-            android:gravity="center"
-            android:text="@string/login_sign_up"
-            android:textColor="?colorAccent" />
+        <ImageButton
+            android:id="@+id/close_dialog_button"
+            android:layout_width="@dimen/standard_button_height"
+            android:layout_height="@dimen/standard_button_height"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
+            android:tint="@color/light_colorPrimaryLight"
+            android:visibility="gone" />
+    </RelativeLayout>
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_2"
-        android:layout_alignParentTop="true"
-        android:orientation="horizontal">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_2"
-            android:layout_marginEnd="@dimen/margin_1"
-            android:layout_weight="1"
-            android:background="?colorPrimaryLight" />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/height_2"
-            android:layout_weight="1"
-            android:background="?colorAccent" />
-    </LinearLayout>
 
     <!--  TOP SPLITTER-->
     <View
@@ -71,92 +59,96 @@
 
 
     <!-- BOTTOM BUTTONS CONTAINER -->
-    <RelativeLayout
-        android:id="@+id/bottom_buttons_container_sign_up"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/standard_button_height"
-        android:layout_alignParentStart="true"
-        android:layout_alignWithParentIfMissing="true"
-        android:layout_below="@+id/content_container"
-        android:background="@drawable/popup_login_button_background">
 
-        <TextView
-            android:id="@+id/sign_up_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/sign_up_sign_up"
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/font_size_18" />
-
-        <com.wang.avi.AVLoadingIndicatorView
-            android:id="@+id/sign_up_progress_bar"
-            android:layout_width="@dimen/prodgres_bar"
-            android:layout_height="@dimen/prodgres_bar"
-            android:elevation="@dimen/elevation_2"
-            app:indicatorName="LineSpinFadeLoaderIndicator"
-            android:layout_centerInParent="true"
-            android:visibility="gone"/>
-
-    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/content_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?colorPrimarySemiLight"
-        android:layout_below="@+id/top_split_line"
+        android:layout_height="match_parent"
         android:layout_alignParentStart="true"
+        android:layout_below="@+id/top_split_line"
+
         android:clickable="true">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.5"
+            android:background="@drawable/lounge_background"
+            android:orientation="horizontal"
+            android:tileMode="repeat" />
+
         <LinearLayout
-            android:layout_width="@dimen/login_conteiner_width"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
+            android:layout_above="@+id/bottom_buttons_container_sign_up"
+            android:layout_marginStart="@dimen/margin_40"
+            android:layout_marginEnd="@dimen/margin_40"
             android:layout_marginTop="@dimen/margin_40"
             android:orientation="vertical">
 
-            <com.facebook.login.widget.LoginButton
-                android:id="@+id/sign_up_facebook"
-                style="@style/button_facebook"
+            <Button
+                android:id="@+id/facebook_button"
+                style="@style/facebook_login_button_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/sign_up_facebook" />
+                android:text="@string/join_with_facebook"
+                android:textSize="@dimen/font_size_16"
+                android:textAllCaps="false"
+                android:textColor="?white" />
+
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/sign_up_facebook"
+                style="@style/facebook_login_button_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/join_with_facebook"
+                android:visibility="gone" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
+                android:layout_marginBottom="@dimen/margin_20"
                 android:layout_marginTop="@dimen/margin_20"
-                android:layout_marginBottom="@dimen/margin_20">
-
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
                 <View
-                    android:layout_width="@dimen/width_50"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/height_1"
+                    android:layout_weight="3"
+                    android:background="@color/transparent" />
+                <View
+                    android:layout_width="0dp"
                     android:layout_height="@dimen/height_1"
                     android:layout_weight="1"
-                    android:background="@color/colorPrimary" />
+                    android:background="?white" />
 
                 <TextView
                     android:id="@+id/or_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:gravity="center"
+                    android:textAllCaps="true"
                     android:text="@string/sign_up_or"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/white" />
 
                 <View
-                    android:layout_width="@dimen/width_50"
+                    android:layout_width="0dp"
                     android:layout_height="@dimen/height_1"
                     android:layout_weight="1"
-                    android:background="@color/colorPrimary" />
-
+                    android:background="?white" />
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/height_1"
+                    android:layout_weight="3"
+                    android:background="@color/transparent" />
             </LinearLayout>
 
             <EditText
                 android:id="@+id/sign_up_firstname"
-                style="@style/edit_text_login"
+                style="@style/edit_text_login_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/sign_up_firstname"
@@ -164,7 +156,7 @@
 
             <EditText
                 android:id="@+id/sign_up_lastname"
-                style="@style/edit_text_login"
+                style="@style/edit_text_login_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/sign_up_lastname"
@@ -172,7 +164,7 @@
 
             <EditText
                 android:id="@+id/sign_up_display_name"
-                style="@style/edit_text_login"
+                style="@style/edit_text_login_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/sign_up_username"
@@ -180,7 +172,7 @@
 
             <EditText
                 android:id="@+id/sign_up_email"
-                style="@style/edit_text_login"
+                style="@style/edit_text_login_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/sign_up_email"
@@ -188,7 +180,7 @@
 
             <EditText
                 android:id="@+id/sign_up_phone"
-                style="@style/edit_text_login"
+                style="@style/edit_text_login_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/sign_up_phone"
@@ -196,23 +188,58 @@
 
             <EditText
                 android:id="@+id/sign_up_password"
-                style="@style/edit_text_login"
+                style="@style/edit_text_login_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/login_login_password"
                 android:inputType="textPassword" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_10"
-                android:text="@string/sign_up_text"
-                android:textAlignment="center"
-                android:textColor="?white_semitransparent"
-                android:textSize="@dimen/font_size_10" />
 
         </LinearLayout>
 
+        <RelativeLayout
+            android:id="@+id/bottom_buttons_container_sign_up"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/standard_button_height"
+            android:layout_marginStart="@dimen/margin_30"
+            android:layout_marginEnd="@dimen/margin_30"
+            android:layout_above="@+id/politic_and_privacy_android"
+            android:background="@drawable/button_login_login">
+
+            <TextView
+                android:id="@+id/sign_up_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:textStyle="bold"
+                android:text="@string/join_now"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/font_size_18" />
+
+            <com.wang.avi.AVLoadingIndicatorView
+                android:id="@+id/sign_up_progress_bar"
+                android:layout_width="@dimen/prodgres_bar"
+                android:layout_height="@dimen/prodgres_bar"
+                android:layout_centerInParent="true"
+                android:elevation="@dimen/elevation_2"
+                android:visibility="gone"
+                app:indicatorName="LineSpinFadeLoaderIndicator" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/politic_and_privacy_android"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_10"
+            android:text="@string/sign_up_text"
+            android:textAlignment="center"
+            android:layout_marginStart="@dimen/margin_60"
+            android:layout_marginEnd="@dimen/margin_60"
+            android:layout_marginBottom="@dimen/margin_20"
+            android:layout_alignParentBottom="true"
+            android:textColor="?white_semitransparent"
+            android:textSize="@dimen/font_size_10" />
     </RelativeLayout>
 
 </RelativeLayout>
