--- a/SportsSideKick/app/src/sportsidekick/res/values/styles.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/styles.xml
@@ -437,4 +437,25 @@
         <item name="android:layout_weight">1</item>
         <item name="android:textAllCaps">false</item>
     </style>
+
+    <style name="facebook_login_button_phone">
+        <item name="android:textSize">@dimen/font_size_12</item>
+        <item name="android:background">@drawable/facebook_button</item>
+        <item name="android:textColor">?white</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+    </style>
+
+    <style name="edit_text_login_phone">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:paddingLeft">15dp</item>
+        <item name="android:paddingRight">15dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">@dimen/padding_12</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:gravity">center</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:layout_margin">5dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColorHint">@android:color/white</item>
+    </style>
 </resources>
