--- a/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
@@ -23,7 +23,7 @@
     <color name="demo_blue_semitransparent">#71002df4</color>
     <color name="demo_red_semitransparent">#56ff0000</color>
     <color name="black_transparent_154">#9a000000</color>
-
+    <color name="green_dark_5_semitransparent">#8C00181e</color>
     <color name="facebook_blue">#3b5998</color>
 
 
