--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_create_chat.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_create_chat.xml
@@ -3,15 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:orientation="vertical"
-    android:background="?colorPrimarySemiLight"
-    android:clickable="true">
+    android:background="@color/background_phone"
+    android:clickable="true"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/chat_headline_container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
-        android:clickable="true">
+        android:background="@drawable/lounge_background"
+        android:clickable="true"
+        android:tileMode="repeat">
+
 
         <ImageButton
             android:id="@+id/chat_headline_close_fragment"
@@ -19,19 +22,20 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
+            android:background="@null"
             android:src="?closeIcon"
             android:tint="?colorPrimaryLight"
-            android:background="@null"/>
+            android:visibility="gone" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/chat_caption"
-            android:textColor="@color/white"
-            android:gravity="center"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:padding="@dimen/padding_8"/>
+            android:gravity="center"
+            android:padding="@dimen/padding_8"
+            android:text="@string/chat_caption"
+            android:textColor="@color/white" />
 
     </RelativeLayout>
 
@@ -42,161 +46,214 @@
         android:layout_below="@id/chat_headline_container"
         android:clickable="true">
 
-    <View
-        android:id="@+id/top_vertical_spliter"
-        android:layout_width="@dimen/space_0"
-        android:layout_height="@dimen/standard_button_height"
-        android:layout_centerHorizontal="true" />
+        <RelativeLayout
+            android:id="@+id/top_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:id="@+id/center_split"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/height_1"
+                android:layout_below="@+id/top_buttons_container"
+                android:layout_centerHorizontal="true"
+                android:background="?colorPrimaryLight">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/standard_button_height"
-        android:layout_toStartOf="@+id/top_vertical_spliter"
-        android:gravity="center"
-        android:text="@string/create_chat"
-        android:textColor="?colorAccent" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/height_2"
+                    android:layout_marginEnd="@dimen/margin_1"
+                    android:layout_weight="1"
+                    android:background="?colorAccent" />
 
-    <TextView
-        android:id="@+id/join_a_chat"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/standard_button_height"
-        android:layout_toEndOf="@+id/top_vertical_spliter"
-        android:background="?green_dark_3"
-        android:gravity="center"
-        android:text="@string/join_chat"
-        android:textColor="?white_semitransparent" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/height_2"
+                    android:layout_marginEnd="@dimen/margin_1"
+                    android:layout_weight="1"
+                    android:background="?colorPrimaryLight" />
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_2"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_toStartOf="@+id/top_vertical_spliter"
-        android:background="?colorAccent" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/height_2"
+                    android:layout_weight="1"
+                    android:background="?colorPrimaryLight" />
+            </LinearLayout>
+            <!-- TOP BUTTONS CONTAINER -->
+            <LinearLayout
+                android:id="@+id/top_container_linear"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/standard_button_height"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/center_split"
+                android:background="@color/green_dark_4"
+                android:orientation="horizontal">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/height_2"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_toEndOf="@+id/top_vertical_spliter"
-        android:background="?colorPrimaryLight" />
+                <TextView
 
-    <TextView
-        android:id="@+id/chat_name_label"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/create_chat_name_label_height"
-        android:layout_below="@+id/top_vertical_spliter"
-        android:layout_toStartOf="@+id/top_vertical_spliter"
-        android:background="@color/colorPrimary"
-        android:foregroundGravity="right"
-        android:gravity="center_vertical|end"
-        android:paddingEnd="@dimen/margin_70"
-        android:text="@string/chat_name"
-        android:textColor="@color/white"
-        android:visibility="gone"/>
+                    android:layout_width="@dimen/space_0"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/margin_1"
+                    android:layout_weight="1"
+                    android:background="@color/background_phone"
+                    android:gravity="center"
+                    android:text="@string/create_chat"
+                    android:textColor="?white" />
+
+                <TextView
+                    android:id="@+id/join_a_chat"
+                    android:layout_width="@dimen/space_0"
+                    android:layout_height="match_parent"
+                    android:layout_marginEnd="@dimen/margin_1"
+                    android:layout_weight="1"
+                    android:background="@color/green_dark_phone_3"
+                    android:gravity="center"
+                    android:text="@string/join_chat"
+                    android:textColor="?white_semitransparent" />
+
+                <TextView
+                    android:id="@+id/requests_chat"
+                    android:layout_width="@dimen/space_0"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/green_dark_phone_3"
+                    android:gravity="center"
+                    android:text="@string/request"
+                    android:textColor="?white_semitransparent" />
+            </LinearLayout>
+
+
+
+        </RelativeLayout>
+        <View
+            android:id="@+id/top_split_line"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_1"
+            android:layout_below="@+id/top_container"
+            android:background="@color/green_dark_4" />
+        <View
+            android:id="@+id/top_vertical_spliter_helper"
+            android:layout_width="@dimen/space_0"
+            android:layout_height="@dimen/standard_button_height"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:id="@+id/chat_name_label"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/standard_button_height"
+            android:layout_below="@+id/top_container"
+            android:layout_toStartOf="@+id/top_vertical_spliter_helper"
+            android:background="@color/colorPrimary"
+            android:foregroundGravity="right"
+            android:gravity="center_vertical|end"
+            android:paddingEnd="@dimen/margin_70"
+            android:text="@string/chat_name"
+            android:textColor="@color/white"
+            android:visibility="gone" />
 
         <ImageView
             android:id="@+id/chat_image_view"
-            android:layout_width="@dimen/create_chat_name_label_height"
-            android:layout_height="@dimen/create_chat_name_label_height"
-            android:layout_below="@+id/top_vertical_spliter"
-            android:background="?black_transparent_154"
+            android:layout_width="@dimen/height_55"
+            android:layout_height="@dimen/height_55"
             android:layout_alignParentStart="true"
-            android:visibility="gone"
-            android:scaleType="fitXY"/>
+            android:layout_below="@+id/top_container"
+            android:background="?black_transparent_154"
+            android:scaleType="fitXY"
+            android:visibility="gone" />
 
-    <EditText
-        android:id="@+id/chat_name_edit_text"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/create_chat_name_label_height"
-        android:layout_below="@+id/top_vertical_spliter"
-        android:background="?green_dark_2"
-        android:gravity="start|center_vertical"
-        android:hint="@string/your_chat_name"
-        android:imeOptions="flagNoExtractUi"
-        android:maxLines="1"
-        android:textColor="@color/white"
-        android:textColorHint="?white_semitransparent"
-        android:textSize="@dimen/font_size_14"
-        android:padding="@dimen/margin_20"
-        android:layout_toStartOf="@+id/chat_popup_image_button"
-        android:layout_toEndOf="@id/chat_image_view"/>
+        <EditText
+            android:id="@+id/chat_name_edit_text"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_55"
+            android:layout_below="@+id/top_container"
+            android:layout_toEndOf="@id/chat_image_view"
+            android:layout_toStartOf="@+id/chat_popup_image_button"
+            android:background="@color/green_dark_phone_4"
+            android:gravity="start|center_vertical"
+            android:hint="@string/your_chat_name"
+            android:imeOptions="flagNoExtractUi"
+            android:maxLines="1"
+            android:padding="@dimen/margin_15"
+            android:textColor="@color/white"
+            android:textColorHint="?white"
+            android:textSize="@dimen/font_size_14" />
 
         <ImageButton
             android:id="@+id/chat_popup_image_button"
-            android:layout_width="@dimen/create_chat_name_label_height"
-            android:layout_height="@dimen/create_chat_name_label_height"
+            android:layout_width="@dimen/height_55"
+            android:layout_height="@dimen/height_55"
             android:layout_alignParentEnd="true"
-            android:src="@drawable/chat_camera_button"
+            android:layout_below="@+id/top_container"
             android:background="?colorPrimaryLight"
-            android:layout_below="@+id/top_vertical_spliter"
-            android:clickable="true"/>
+            android:clickable="true"
+            android:src="@drawable/chat_camera_button" />
 
     </RelativeLayout>
 
     <TextView
         android:id="@+id/caption_label"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/create_chat_caption_label"
+        android:layout_height="@dimen/height_35"
         android:layout_below="@+id/chat_top_buttons_container"
         android:gravity="center"
-        android:text="@string/add_friends_to_chat"
+        android:text="@string/add_friends_to_chat_phone"
         android:textColor="@color/white" />
 
     <RelativeLayout
         android:id="@+id/chat_search_friends_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/caption_label"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/caption_label">
 
         <View
             android:id="@+id/chat_search_friends_container_mid_line"
             android:layout_width="@dimen/space_0"
             android:layout_height="@dimen/space_0"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true" />
 
         <Switch
             android:id="@+id/private_chat_switch"
-            android:layout_width="@dimen/create_chat_switch_width"
-            android:layout_height="@dimen/create_chat_name_label_height"
-            android:gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/standard_button_height"
+            android:layout_centerVertical="true"
             android:layout_marginEnd="@dimen/margin_10"
+            android:layout_marginStart="@dimen/margin_16"
             android:layout_toEndOf="@+id/chat_search_friends_container_mid_line"
-            android:layout_centerVertical="true"/>
+            android:gravity="center_vertical" />
 
         <TextView
             android:id="@+id/private_chat_label"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/create_chat_name_label_height"
-            android:textColor="@color/white"
+            android:layout_height="@dimen/standard_button_height"
+            android:layout_marginEnd="@dimen/margin_16"
+            android:layout_toEndOf="@+id/private_chat_switch"
             android:gravity="center_vertical"
-            android:text="@string/this_chat_is_public"
-            android:layout_toEndOf="@+id/private_chat_switch"/>
+            android:text="@string/this_chat_is_public_phone"
+            android:textColor="@color/white" />
 
         <EditText
             android:id="@+id/search_edit_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="@dimen/margin_8"
+            android:layout_marginStart="@dimen/margin_15"
+            android:layout_toStartOf="@+id/chat_search_friends_container_mid_line"
             android:background="@drawable/textview_dark_round"
+            android:drawablePadding="@dimen/padding_8"
+            android:drawableStart="@drawable/popup_search_icon"
             android:gravity="center_vertical"
             android:hint="@string/search_for_member"
             android:imeOptions="flagNoExtractUi|actionSearch"
             android:inputType="text"
             android:lines="1"
             android:maxLines="1"
+            android:padding="@dimen/padding_8"
+            android:paddingStart="@dimen/padding_8"
             android:textColor="@color/white"
             android:textColorHint="?white_semitransparent"
-            android:textSize="@dimen/font_size_14"
-            android:layout_toStartOf="@+id/chat_search_friends_container_mid_line"
-            android:layout_alignParentStart="true"
-            android:drawableStart="@drawable/popup_search_icon"
-            android:padding="@dimen/half_margin"
-            android:layout_marginStart="@dimen/margin_15"
-            android:layout_centerVertical="true"
-            android:paddingStart="@dimen/padding_8"
-            android:drawablePadding="@dimen/padding_8"/>
+            android:textSize="@dimen/font_size_12" />
 
     </RelativeLayout>
 
@@ -204,17 +261,17 @@
         android:id="@+id/chat_friends_in_chat_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?green_dark_2"
-        android:layout_above="@+id/confirm_button">
+        android:layout_above="@+id/confirm_button"
+        android:background="@color/green_dark_phone_3">
 
         <TextView
             android:id="@+id/chat_friends_in_chat_headline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:padding="@dimen/padding_8"
             android:text="@string/friends_in_chat"
-            android:textColor="@color/white"
-            android:padding="@dimen/padding_8"/>
+            android:textColor="@color/white" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/chat_friends_in_chat_recycler_view"
@@ -232,23 +289,25 @@
     <Button
         android:id="@+id/confirm_button"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/popup_language_bottom_buttons_container_height"
+        android:layout_height="@dimen/standard_button_height"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:background="?colorAccent"
+        android:background="@color/light_button_chat"
         android:scaleType="centerInside"
-        android:textColor="?green_dark_2"
         android:text="@string/create_chat"
         android:textAllCaps="false"
-        android:layout_alignParentBottom="true"/>
+        android:textColor="?green_dark_2" />
 
     <base.app.util.ui.AutofitRecyclerView
         android:id="@+id/friends_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:numColumns="auto_fit"
+        android:layout_above="@+id/chat_friends_in_chat_container"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/chat_search_friends_container"
-        android:layout_above="@+id/chat_friends_in_chat_container" />
+        android:layout_marginEnd="@dimen/margin_16"
+        android:layout_marginStart="@dimen/margin_16"
+        android:clipToPadding="false"
+        android:numColumns="auto_fit" />
 </RelativeLayout>
