--- a/SportsSideKick/app/src/sportsidekick/res/values-xxxhdpi/dimens.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values-xxxhdpi/dimens.xml
@@ -5,9 +5,10 @@
     <dimen name="margin_sharp_20">0dp</dimen>
     <bool name="is_tablet">false</bool>
     <dimen name="rumours_top_image_heihgt">153dp</dimen>
-    <dimen name="friend_item_image">45dp</dimen>
+    <dimen name="friend_item_image">50dp</dimen>
     <dimen name="popup_friend_profil_profile_image_size">72dp</dimen>
     <dimen name="popup_friend_profil_progress_bar_size">85dp</dimen>
     <dimen name="popup_friend_profil_progress_hex_bar_size">62dp</dimen>
     <dimen name="edit_profile_label_text_size">114dp</dimen>
+    <dimen name="row_chat_bubble_user_size">50dp</dimen>
 </resources>
