--- a/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
@@ -49,6 +49,9 @@
     <color name="gray_menu">#d3d4d8</color>
     <color name="green_light_3">#255d5e</color>
     <color name="green_dark_phone_4">#022426</color>
+    <color name="light_button_chat">#fdfe24</color>
+    <color name="background_phone">#225357</color>
+    <color name="green_dark_phone_3">#01363c</color>
     <!--*****************************************************************************************-->
     <!--Light Theme-->
     <color name="light_colorAccent">#ffe324</color>
