--- a/SportsSideKick/app/src/sportsidekick/res/values/dimens.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/dimens.xml
@@ -102,6 +102,7 @@
     <dimen name="row_friends_notification_bubble_size">32dp</dimen>
 
     <dimen name="row_chat_bubble_user_size">60dp</dimen>
+    <dimen name="row_chat_bubble_user_size_call">60dp</dimen>
     <dimen name="space_0">0dp</dimen>
     <dimen name="font_size_28">28sp</dimen>
     <dimen name="font_size_35">35sp</dimen>
