--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_member_info.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_member_info.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="@dimen/popup_friend_request_width"
+    android:layout_height="@dimen/height_350"
     android:background="?popupBottomBackgroundDarkShape"
     android:clickable="true"
     android:orientation="vertical">
-
     <TextView
         android:id="@+id/caption"
         android:layout_width="match_parent"
@@ -151,8 +150,8 @@
         android:layout_marginStart="@dimen/margin_20"
         android:layout_toEndOf="@+id/middle_split_line"
         android:background="@null"
-        android:drawablePadding="@dimen/margin_10"
         android:drawableStart="@drawable/friend_chat_button"
+        android:drawablePadding="@dimen/margin_10"
         android:text="@string/chat_caption"
         android:textColor="@color/white" />
 
@@ -166,8 +165,8 @@
         android:layout_marginStart="@dimen/margin_20"
         android:layout_toEndOf="@+id/middle_split_line"
         android:background="@null"
-        android:drawablePadding="@dimen/margin_10"
         android:drawableStart="@drawable/friend_follow_button"
+        android:drawablePadding="@dimen/margin_10"
         android:textColor="@color/white" />
 
 
