--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_create_chat.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_create_chat.xml
@@ -75,6 +75,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/height_2"
+                    android:visibility="gone"
                     android:layout_weight="1"
                     android:background="?colorPrimaryLight" />
             </LinearLayout>
@@ -115,6 +116,7 @@
                     android:layout_width="@dimen/space_0"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:visibility="gone"
                     android:background="@color/green_dark_phone_3"
                     android:gravity="center"
                     android:text="@string/request"
