--- a/SportsSideKick/app/src/sportsidekick/res/values/attrs.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/attrs.xml
@@ -142,6 +142,8 @@
     <attr name="chatHeadBackgroundColor" format="reference"/>
 
     <attr name="wallMenuBackground" format="reference"/>
+    <attr name="phoneWallMenuBackground" format="reference"/>
+
 
     <attr name="wallMenuNewPostIcon" format="reference"/>
     <attr name="wallMenuFilterIcon" format="reference"/>
@@ -211,4 +213,10 @@
 
     <attr name="playerBackground" format="reference"/>
     <attr name="profileImageLoungeIcon" format="reference"/>
+
+    <!--*****************************************************************************************-->
+
+    <attr name="phoneWallEditSearchText" format="reference"/>
+    <attr name="phoneWallEditSearchHint" format="reference"/>
+
 </resources>
