Menu item name color and Currency label bolded.

--- a/SportsSideKick/app/src/sportsidekick/res/layout/row_menu_navigation.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/row_menu_navigation.xml
@@ -24,6 +24,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="@color/green_dark_1" />
+        android:textColor="@color/menu_name_color" />
 </LinearLayout>
 </RelativeLayout>
