--- a/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge_phone.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/activity_lounge_phone.xml
@@ -318,6 +318,7 @@
                             android:ellipsize="end"
                             android:maxLines="1"
                             android:text="0"
+                            android:textStyle="bold"
                             android:textAlignment="center"
                             android:textColor="@color/light_colorPrimarySemiLight"
                             android:textSize="@dimen/font_size_12" />
