--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_login.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_login.xml
@@ -263,8 +263,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:background="@drawable/phone_background"
-        android:orientation="horizontal"
-        android:tileMode="repeat">
+        android:orientation="horizontal">
         <ImageButton
             android:id="@+id/close_dialog_button"
             android:layout_width="@dimen/standard_button_height"
