--- a/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/colors.xml
@@ -69,6 +69,7 @@
     <color name="light_green_dark_2_semitransparent">#a800363b</color>
 
     <color name="light_light_green_2">#00ab8d</color>
+    <color name="light_background">#b1bebb</color>
     <color name="light_lightGrey">#9ba1a3</color>
     <color name="light_white">#ffffff</color>
     <color name="light_white_semitransparent">#5fffffff</color>
