Chat fragment: change background, added sticker button

--- a/SportsSideKick/app/src/sportsidekick/res/values/attrs.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/attrs.xml
@@ -219,4 +219,6 @@
     <attr name="phoneWallEditSearchText" format="reference"/>
     <attr name="phoneWallEditSearchHint" format="reference"/>
 
+    <attr name="phoneChatBackground" format="reference" />
+
 </resources>
