--- a/SportsSideKick/app/src/sportsidekick/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/fragment_chat.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="?chatBackground" />
+        android:src="?phoneChatBackground" />
 
     <!-- Empty chat info text -->
     <TextView
@@ -48,17 +48,17 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/chat_heads_view"
             android:background="?colorPrimary">
-        <TextView
-            android:id="@+id/chat_info_line_text"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_20"
-            android:layout_marginEnd="@dimen/margin_60"
-            android:layout_marginStart="@dimen/margin_60"
-            android:ellipsize="marquee"
-            android:gravity="center"
-            android:lines="1"
-            android:textColor="?white_semitransparent"
-            android:textSize="@dimen/font_size_10" />
+            <TextView
+                android:id="@+id/chat_info_line_text"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/margin_20"
+                android:layout_marginEnd="@dimen/margin_60"
+                android:layout_marginStart="@dimen/margin_60"
+                android:ellipsize="marquee"
+                android:gravity="center"
+                android:lines="1"
+                android:textColor="?white_semitransparent"
+                android:textSize="@dimen/font_size_10" />
 
         </RelativeLayout>
     </RelativeLayout>
@@ -96,7 +96,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
         android:animateLayoutChanges="true"
-        android:background="?chat_input_edit_text_background">
+        android:background="?white">
 
         <RelativeLayout
             android:id="@+id/chat_buttons_container"
@@ -134,18 +134,28 @@
                 android:background="@null"
                 android:src="?chatGalleryIcon" />
 
+            <ImageButton
+                android:id="@+id/sticker_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/image_button"
+                android:background="@null"
+                android:src="@drawable/chat_button_sticker" />
+
             <View
                 android:id="@+id/chat_menu_divider"
-                android:layout_width="@dimen/width_3"
+                android:layout_width="@dimen/width_2"
                 android:layout_height="match_parent"
-                android:layout_toEndOf="@+id/image_button"
+                android:layout_toEndOf="@+id/sticker_button"
                 android:background="@color/white" />
 
         </RelativeLayout>
 
         <ImageButton
             android:id="@+id/menu_button"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/standard_button_height"
+            android:layout_marginEnd="@dimen/height_1"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@+id/chat_buttons_container"
@@ -172,6 +182,7 @@
                 android:imeOptions="actionSend"
                 android:inputType="text"
                 android:maxLines="1"
+                android:paddingStart="@dimen/padding_16"
                 android:padding="@dimen/padding_8"
                 android:privateImeOptions=""
                 android:textColor="@color/colorPrimary"
@@ -182,8 +193,9 @@
 
         <ImageButton
             android:id="@+id/chat_menu_dots"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/standard_button_height"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/height_1"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="@null"
