--- a/SportsSideKick/app/src/sportsidekick/res/values/attrs.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/attrs.xml
@@ -219,4 +219,34 @@
     <attr name="phoneWallEditSearchText" format="reference"/>
     <attr name="phoneWallEditSearchHint" format="reference"/>
 
+
+
+
+    <!--Added for 4.2 - 4.4-->
+    <attr name="popupLoginButtonBackground" format="reference"/>
+    <attr name="popupBottomBackground" format="reference"/>
+    <attr name="popupBottomLeftBackground" format="reference"/>
+    <attr name="greenCircle" format="reference"/>
+
+    <attr name="popupOnClickChangeTextColor" format="reference"/>
+    <attr name="buttonLogin" format="reference"/>
+    <attr name="buttonEditProfileImage" format="reference"/>
+
+    <!--<attr name="" format="reference"/>-->
+    <!--<attr name="" format="reference"/>-->
+    <!--<attr name="" format="reference"/>-->
+
+    <!--<attr name="" format="reference"/>-->
+    <!--<attr name="" format="reference"/>-->
+    <!--<attr name="" format="reference"/>-->
+    <!--<attr name="" format="reference"/>-->
+    <!--<attr name="" format="reference"/>-->
+
+    <!--<attr name="" format="reference"/>-->
+    <!--<attr name="" format="reference"/>-->
+    <!--<attr name="" format="reference"/>-->
+    <!--<attr name="" format="reference"/>-->
+    <!--<attr name="" format="reference"/>-->
+
+
 </resources>
