--- a/SportsSideKick/app/src/sportsidekick/res/drawable/button_onclick_change_text_color_initial.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/drawable/button_onclick_change_text_color_initial.xml
@@ -1,4 +1,4 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="?attr/black_transparent_154" android:state_pressed="true"/>
-    <item android:color="?attr/lightGrey"/>
+    <item android:color="@color/black_transparent_154" android:state_pressed="true"/>
+    <item android:color="@color/lightGrey"/>
 </selector>
