--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_login.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_login.xml
@@ -85,7 +85,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignWithParentIfMissing="true"
         android:layout_below="@+id/container"
-        android:background="@drawable/popup_login_button_background"
+        android:background="?attr/popupLoginButtonBackground"
         android:clickable="true">
 
         <TextView
@@ -116,7 +116,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignWithParentIfMissing="true"
         android:layout_below="@+id/container"
-        android:background="@drawable/popup_login_button_background"
+        android:background="?attr/popupLoginButtonBackground"
         android:clickable="true"
         android:visibility="invisible">
 
