--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_your_profile.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_your_profile.xml
@@ -443,7 +443,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignWithParentIfMissing="true"
         android:layout_below="@+id/content_container"
-        android:background="@drawable/popup_bottom_background"
+        android:background="?attr/popupBottomBackground"
         android:clickable="true">
 
         <View
