--- a/SportsSideKick/app/src/sportsidekick/res/values/styles.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values/styles.xml
@@ -176,6 +176,18 @@
         <item name="phoneWallMenuBackground">@color/wall_bottom_bar_background_color</item>
 
         <item name="phoneWallEditSearchText">@color/colorPrimary</item>
+
+        <item name="popupLoginButtonBackground">@drawable/popup_login_button_background</item>
+
+        <item name="popupBottomBackground">@drawable/popup_bottom_background</item>
+
+        <item name="popupBottomLeftBackground">@drawable/popup_bottom_left_background</item>
+
+        <item name="greenCircle">@drawable/circle_green</item>
+
+        <item name="popupOnClickChangeTextColor">@drawable/button_onclick_change_text_color_initial</item>
+        <item name="buttonLogin">@drawable/button_login_login</item>
+        <item name="buttonEditProfileImage">@drawable/button_edit_profile_image</item>
     </style>
 <!--*********************************************************************************************-->
     <style name="LightTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -283,7 +295,7 @@
 
         <item name="seekBarAudioShape" >@drawable/seek_bar_audio</item>
 
-        <item name="wallBackground" >@color/light_wall_background</item>
+        <item name="wallBackground">@color/light_wall_background</item>
 
         <item name="circularProgressBarDrawable" >@drawable/light_circular_progress_bar</item>
 
@@ -349,7 +361,18 @@
 
         <item name="phoneWallEditSearchText">@color/colorPrimary</item>
 
+        <item name="popupLoginButtonBackground">@drawable/light_popup_login_button_background</item>
 
+
+        <item name="popupBottomBackground">@drawable/light_popup_bottom_background</item>
+
+        <item name="popupBottomLeftBackground">@drawable/light_popup_bottom_left_background</item>
+
+        <item name="greenCircle">@drawable/light_circle_green</item>
+
+        <item name="popupOnClickChangeTextColor">@drawable/light_button_onclick_change_text_color_initial</item>
+        <item name="buttonLogin">@drawable/light_button_login_login</item>
+        <item name="buttonEditProfileImage">@drawable/light_button_edit_profile_image</item>
     </style>
 
     <!-- This will set the fade in animation on all your activities by default -->
